<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:auto="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="General">

        <SwitchPreference
            android:defaultValue="@bool/pref_default_sounds"
            android:icon="@drawable/ic_volume_accent_24dp"
            android:key="@string/pref_key_sounds"
            android:summary="@string/pref_description_sounds"
            android:title="@string/pref_title_sounds" />

        <SwitchPreference
            android:defaultValue="@bool/pref_default_vibration"
            android:icon="@drawable/ic_vibration_accent_24dp"
            android:key="@string/pref_key_vibration"
            android:summary="@string/pref_description_vibration"
            android:title="@string/pref_title_vibration" />
        <SwitchPreference
            android:defaultValue="@bool/pref_default_sync"
            android:icon="@drawable/ic_sync_accent_24dp"
            android:key="@string/pref_key_sync"
            android:summary="@string/pref_description_sync"
            android:title="@string/pref_title_sync" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Team titles">

        <EditTextPreference
            android:defaultValue="@string/pref_default_name_team1"
            android:key="@string/pref_key_name_team1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_name_team1"
            tools:summary="Vėjainis (team on the left)"/>

        <EditTextPreference
            android:defaultValue="@string/pref_default_name_team2"
            android:key="@string/pref_key_name_team2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_name_team2"
            tools:summary="Potrankiai (team on the right)"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Game sounds">

        <com.unixonly.fooslive.fragments.ExtraRingtonePreference
            android:key="@string/pref_key_sound_goal_team1"
            android:title="@string/pref_title_sound_goal_team1"
            android:defaultValue="@string/pref_default_sound_goal_team1"
            auto:ringtoneType="notification"
            auto:showSilent="true"
            auto:showDefault="true"
            auto:extraRingtones="@array/pref_sounds_values"
            auto:extraRingtoneTitles="@array/pref_sounds_titles"
            tools:summary="@string/sound_title_mario_coin"/>

        <com.unixonly.fooslive.fragments.ExtraRingtonePreference
            android:key="@string/pref_key_sound_win_team1"
            android:title="@string/pref_title_sound_win_team1"
            android:defaultValue="@string/pref_default_sound_win_team1"
            auto:ringtoneType="notification"
            auto:showSilent="true"
            auto:showDefault="true"
            auto:extraRingtones="@array/pref_sounds_values"
            auto:extraRingtoneTitles="@array/pref_sounds_titles"
            tools:summary="@string/sound_title_mario_coin"/>

        <com.unixonly.fooslive.fragments.ExtraRingtonePreference
            android:key="@string/pref_key_sound_goal_team2"
            android:title="@string/pref_title_sound_goal_team2"
            android:defaultValue="@string/pref_default_sound_goal_team2"
            auto:ringtoneType="notification"
            auto:showSilent="true"
            auto:showDefault="true"
            auto:extraRingtones="@array/pref_sounds_values"
            auto:extraRingtoneTitles="@array/pref_sounds_titles"
            tools:summary="@string/sound_title_mario_coin"/>

        <com.unixonly.fooslive.fragments.ExtraRingtonePreference
            android:key="@string/pref_key_sound_win_team2"
            android:title="@string/pref_title_sound_win_team2"
            android:defaultValue="@string/pref_default_sound_win_team2"
            auto:ringtoneType="notification"
            auto:showSilent="true"
            auto:showDefault="true"
            auto:extraRingtones="@array/pref_sounds_values"
            auto:extraRingtoneTitles="@array/pref_sounds_titles"
            tools:summary="@string/sound_title_mario_coin"/>

    </PreferenceCategory>

</PreferenceScreen>