<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_game_modes"
            android:text="@string/title_menu_modes"
            style="@style/FoosballTheme.MenuButton"/>

        <Button
            android:id="@+id/button_settings"
            android:text="@string/title_settings"
            style="@style/FoosballTheme.MenuButton"/>

        <Button
            android:id="@+id/button_history"
            android:text="@string/title_history"
            style="@style/FoosballTheme.MenuButton"/>

        <Button
            android:id="@+id/button_info"
            android:text="@string/title_info"
            style="@style/FoosballTheme.MenuButton"/>

    </LinearLayout>

</layout>