<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_0.33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33055556" />

    <ImageView
        android:id="@+id/bg_avg_ball_speed"
        app:layout_constraintEnd_toStartOf="@+id/guideline_0.33"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/FoosballTheme.StatsBackground"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_avg_ball_speed"
        app:layout_constraintEnd_toStartOf="@+id/text_avg_speed_unit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/FoosballTheme.EndGameComponentStatsValue"
        tools:text="55" />

    <TextView
        android:id="@+id/text_avg_speed_unit"
        android:text="@string/units_speed"
        app:layout_constraintEnd_toStartOf="@+id/guideline_0.33"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/text_avg_ball_speed"
        app:layout_constraintTop_toTopOf="@+id/text_avg_ball_speed"
        style="@style/FoosballTheme.EndGameComponentStatsUnit"/>


    <TextView
        android:id="@+id/text_avg_ball_speed_label"
        android:text="@string/label_avg_ball_speed"
        app:layout_constraintEnd_toEndOf="@+id/text_avg_speed_unit"
        app:layout_constraintStart_toStartOf="@+id/text_avg_ball_speed"
        app:layout_constraintTop_toBottomOf="@+id/text_avg_ball_speed"
        style="@style/FoosballTheme.EndGameComponentStatsLabel"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_0.66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <ImageView
        android:id="@+id/bg_max_ball_speed"
        app:layout_constraintEnd_toStartOf="@+id/guideline_0.66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_0.33"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/FoosballTheme.StatsBackground"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_max_ball_speed"
        app:layout_constraintEnd_toStartOf="@+id/text_max_speed_unit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideline_0.33"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/FoosballTheme.EndGameComponentStatsValue"
        tools:text="85" />

    <TextView
        android:id="@+id/text_max_speed_unit"
        android:text="@string/units_speed"
        app:layout_constraintEnd_toStartOf="@+id/guideline_0.66"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/text_max_ball_speed"
        app:layout_constraintTop_toTopOf="@+id/text_max_ball_speed"
        style="@style/FoosballTheme.EndGameComponentStatsUnit"/>


    <TextView
        android:id="@+id/text_max_speed_label"
        android:text="@string/label_max_ball_speed"
        app:layout_constraintEnd_toEndOf="@+id/text_max_speed_unit"
        app:layout_constraintStart_toStartOf="@+id/text_max_ball_speed"
        app:layout_constraintTop_toBottomOf="@+id/text_max_ball_speed"
        style="@style/FoosballTheme.EndGameComponentStatsLabel"/>


    <ImageView
        android:id="@+id/bg_fastest_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_0.66"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/FoosballTheme.StatsBackground"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_fastest_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_0.66"
        app:layout_constraintTop_toTopOf="@+id/bg_fastest_goal"
        style="@style/FoosballTheme.EndGameComponentStatsValue"
        tools:text="00:32" />

    <TextView
        android:id="@+id/text_fastest_goal_label"
        android:text="@string/label_fastest_goal"
        app:layout_constraintEnd_toEndOf="@+id/text_fastest_goal"
        app:layout_constraintStart_toStartOf="@+id/text_fastest_goal"
        app:layout_constraintTop_toBottomOf="@+id/text_fastest_goal"
        style="@style/FoosballTheme.EndGameComponentStatsLabel"/>


</android.support.constraint.ConstraintLayout>