<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="30dp"
    android:background="#80000000"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/text_team1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_team1"
        android:textColor="#ffffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_team1_label"
        android:maxLength="11"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textColor="#ffffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/text_team1_label"
        app:layout_constraintTop_toBottomOf="@+id/text_team1_label"
        tools:text="Bangelė" />


    <TextView
        android:id="@+id/text_team2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/label_team2"
        android:textColor="#ffffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_team2_label"
        android:maxLength="11"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textColor="#ffffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_team2_label"
        app:layout_constraintTop_toBottomOf="@+id/text_team2_label"
        tools:text="Vėjelis" />


    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textColor="#ffffffff"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_team1"
        tools:text="3  :  5" />

    <TextView
        android:id="@+id/text_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/label_duration"
        android:textColor="#ffffffff"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/text_score"
        app:layout_constraintStart_toStartOf="@+id/text_score"
        app:layout_constraintTop_toBottomOf="@+id/text_score" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/text_duration_label"
        app:layout_constraintStart_toStartOf="@+id/text_duration_label"
        app:layout_constraintTop_toBottomOf="@+id/text_duration_label"
        tools:text="05:32" />


    <TextView
        android:id="@+id/text_heat_map_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_table_activity_zones"
        android:textAlignment="center"
        android:textColor="#ffffffff"
        app:layout_constraintEnd_toEndOf="@+id/text_duration"
        app:layout_constraintStart_toStartOf="@+id/text_duration"
        app:layout_constraintTop_toBottomOf="@+id/text_duration" />

    <ImageView
        android:id="@+id/image_heat_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_heat_map_label" />

    <ProgressBar
        android:id="@+id/progress_heatmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_heat_map_label"
        tools:visibility="visible" />

    <include
        android:id="@+id/include"
        layout="@layout/component_end_game_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>